--- a/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
+++ b/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
@@ -1236,8 +1236,8 @@
                                 <rect key="frame" x="114" y="230" width="93" height="108"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="108" id="ta3-TI-lq4"/>
-                                    <constraint firstAttribute="width" constant="93" id="wjv-g4-wgN"/>
+                                    <constraint firstAttribute="height" constant="108" placeholder="YES" id="ta3-TI-lq4"/>
+                                    <constraint firstAttribute="width" constant="93" placeholder="YES" id="wjv-g4-wgN"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RuW-dy-GsI">
@@ -1368,8 +1368,8 @@
                         </subviews>
                         <color key="backgroundColor" red="0.91764705882352937" green="0.24705882352941178" blue="0.24705882352941178" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="xZG-ie-JbE" firstAttribute="top" secondItem="S58-5P-rnV" secondAttribute="top" constant="230" id="DOv-yx-Fa8"/>
-                            <constraint firstAttribute="centerX" secondItem="xZG-ie-JbE" secondAttribute="centerX" id="eHq-To-4PY"/>
+                            <constraint firstItem="xZG-ie-JbE" firstAttribute="top" secondItem="S58-5P-rnV" secondAttribute="top" constant="230" placeholder="YES" id="DOv-yx-Fa8"/>
+                            <constraint firstAttribute="centerX" secondItem="xZG-ie-JbE" secondAttribute="centerX" placeholder="YES" id="eHq-To-4PY"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="kOI-MA-uNB"/>
@@ -1573,8 +1573,8 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="ja2-eM-Mq4">
-                                <rect key="frame" x="0.0" y="40" width="320" height="483"/>
+                            <tableView opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="ja2-eM-Mq4">
+                                <rect key="frame" x="0.0" y="40" width="320" height="464"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="0.050000000000000003" alpha="0.59999999999999998" colorSpace="calibratedWhite"/>
                                 <color key="separatorColor" white="0.66666666669999997" alpha="0.20000000000000001" colorSpace="calibratedWhite"/>
@@ -1744,8 +1744,8 @@
                                     <outlet property="delegate" destination="S59-2g-byz" id="1l6-eh-v38"/>
                                 </connections>
                             </tableView>
-                            <tableView opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="wIw-dm-VqI">
-                                <rect key="frame" x="0.0" y="40" width="320" height="483"/>
+                            <tableView opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="wIw-dm-VqI">
+                                <rect key="frame" x="0.0" y="40" width="320" height="464"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="0.050000000000000003" alpha="0.59999999999999998" colorSpace="calibratedWhite"/>
                                 <color key="separatorColor" white="0.66666666669999997" alpha="0.20000000000000001" colorSpace="calibratedWhite"/>
@@ -1816,8 +1816,8 @@
                                     <outlet property="delegate" destination="S59-2g-byz" id="Mqq-dH-qXo"/>
                                 </connections>
                             </tableView>
-                            <tableView opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="kta-WR-QVH">
-                                <rect key="frame" x="0.0" y="40" width="320" height="483"/>
+                            <tableView opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="kta-WR-QVH">
+                                <rect key="frame" x="0.0" y="40" width="320" height="464"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="0.050000000000000003" alpha="0.59999999999999998" colorSpace="calibratedWhite"/>
                                 <color key="separatorColor" white="0.66666666669999997" alpha="0.20000000000000001" colorSpace="calibratedWhite"/>
@@ -1924,6 +1924,20 @@
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wIw-dm-VqI" firstAttribute="top" secondItem="BBi-dD-GY7" secondAttribute="top" constant="40" id="2YT-93-3Sq"/>
+                            <constraint firstItem="wIw-dm-VqI" firstAttribute="leading" secondItem="BBi-dD-GY7" secondAttribute="leading" id="5tn-Pt-GAf"/>
+                            <constraint firstAttribute="bottom" secondItem="wIw-dm-VqI" secondAttribute="bottom" id="9Av-Nb-Kfi"/>
+                            <constraint firstItem="ja2-eM-Mq4" firstAttribute="top" secondItem="BBi-dD-GY7" secondAttribute="top" constant="40" id="L2m-3S-eaw"/>
+                            <constraint firstItem="kta-WR-QVH" firstAttribute="top" secondItem="BBi-dD-GY7" secondAttribute="top" constant="40" id="Mfa-RL-oOj"/>
+                            <constraint firstAttribute="bottom" secondItem="kta-WR-QVH" secondAttribute="bottom" id="a5j-wD-Vig"/>
+                            <constraint firstAttribute="trailing" secondItem="wIw-dm-VqI" secondAttribute="trailing" id="bq4-p7-ush"/>
+                            <constraint firstAttribute="bottom" secondItem="ja2-eM-Mq4" secondAttribute="bottom" id="cuv-Tc-74n"/>
+                            <constraint firstAttribute="trailing" secondItem="kta-WR-QVH" secondAttribute="trailing" id="h5S-dD-pyg"/>
+                            <constraint firstItem="ja2-eM-Mq4" firstAttribute="leading" secondItem="BBi-dD-GY7" secondAttribute="leading" id="o7E-g0-KZw"/>
+                            <constraint firstAttribute="trailing" secondItem="ja2-eM-Mq4" secondAttribute="trailing" id="tEU-33-evg"/>
+                            <constraint firstItem="kta-WR-QVH" firstAttribute="leading" secondItem="BBi-dD-GY7" secondAttribute="leading" id="yg9-By-1fI"/>
+                        </constraints>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <navigationItem key="navigationItem" title="My Network" id="ppg-Y4-3bi">
@@ -3041,7 +3055,7 @@
         <image name="emptyProfileImage_big" width="140" height="140"/>
         <image name="facebook_mini" width="221" height="50"/>
         <image name="filterButton" width="140" height="140"/>
-        <image name="fluxlogo" width="186" height="217"/>
+        <image name="fluxlogo" width="93" height="108"/>
         <image name="follow" width="300" height="80"/>
         <image name="friend" width="300" height="80"/>
         <image name="friend_accept" width="80" height="80"/>
