--- a/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
+++ b/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
@@ -3110,8 +3110,8 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="03e-8S-vGN"/>
         <segue reference="sbm-gJ-83e"/>
+        <segue reference="cDh-QJ-kAL"/>
         <segue reference="UqM-tx-VCb"/>
     </inferredMetricsTieBreakers>
 </document>
