--- a/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
+++ b/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
@@ -3002,11 +3002,16 @@
                                                         <action selector="inviteButtonAction:" destination="m5L-uD-sNU" eventType="touchUpInside" id="Hhq-aS-v3v"/>
                                                     </connections>
                                                 </button>
+                                                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="wBP-6c-d6h" userLabel="Large White Activity Indicator">
+                                                    <rect key="frame" x="279" y="20" width="20" height="20"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </activityIndicatorView>
                                             </subviews>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <connections>
                                             <outlet property="inviteButton" destination="CCW-qN-4Af" id="k8l-e7-Ofd"/>
+                                            <outlet property="invitingActivityIndicator" destination="wBP-6c-d6h" id="Eyv-5h-KIq"/>
                                             <outlet property="profileImageView" destination="jqk-0U-23F" id="a9f-Kc-qtj"/>
                                             <outlet property="titleLabel" destination="PSB-9F-BnP" id="uHC-dj-f0N"/>
                                         </connections>
@@ -3040,6 +3045,10 @@
                                                         <action selector="contactButtonAction:" destination="1R7-dl-jia" eventType="touchUpInside" id="3VH-mq-b2y"/>
                                                     </connections>
                                                 </button>
+                                                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="o6F-j9-fg6" userLabel="Large White Activity Indicator">
+                                                    <rect key="frame" x="279" y="20" width="20" height="20"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </activityIndicatorView>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NzJ-kC-Ro0">
                                                     <rect key="frame" x="89" y="32" width="181" height="20"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -3056,6 +3065,7 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <connections>
                                             <outlet property="inviteButton" destination="dGi-ol-S0N" id="asQ-pL-pTc"/>
+                                            <outlet property="invitingActivityIndicator" destination="o6F-j9-fg6" id="7yG-A7-GXN"/>
                                             <outlet property="profileImageView" destination="m0T-DN-VdZ" id="3U2-vM-a2r"/>
                                             <outlet property="socialStatusLabel" destination="NzJ-kC-Ro0" id="rNI-I7-IkF"/>
                                             <outlet property="socialTypeImageView" destination="dSK-zg-CLW" id="as6-hE-hYz"/>
@@ -3068,6 +3078,24 @@
                                     <outlet property="delegate" destination="r28-cX-f04" id="z7k-68-dsW"/>
                                 </connections>
                             </tableView>
+                            <view hidden="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8o6-5V-kRW">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="264" translatesAutoresizingMaskIntoConstraints="NO" id="xzA-yn-Sgq">
+                                        <rect key="frame" x="28" y="256" width="264" height="49"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="noFriends" translatesAutoresizingMaskIntoConstraints="NO" id="DE0-6r-zh3">
+                                        <rect key="frame" x="40" y="120" width="240" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.050000000000000003" alpha="0.59999999999999998" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </view>
@@ -3075,6 +3103,8 @@
                     <navigationItem key="navigationItem" title="Facebook" id="BCs-Bs-bHH"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <connections>
+                        <outlet property="emptyListLabel" destination="xzA-yn-Sgq" id="njt-0p-cf9"/>
+                        <outlet property="emptyListView" destination="8o6-5V-kRW" id="sI0-Nf-Rh8"/>
                         <outlet property="importUserTableView" destination="cd0-Ci-bIJ" id="NP9-Md-BHD"/>
                         <outlet property="searchDisplayController" destination="VNf-ON-eCY" id="wB3-qM-vqR"/>
                         <segue destination="zPu-oE-5wX" kind="push" identifier="pushProfileSegue" id="sbm-gJ-83e"/>
@@ -3110,6 +3140,7 @@
         <image name="friend_accept" width="80" height="80"/>
         <image name="friend_dismiss" width="80" height="80"/>
         <image name="inactiveTimeSlider" width="140" height="140"/>
+        <image name="noFriends" width="512" height="512"/>
         <image name="profileMenuButton" width="140" height="140"/>
         <image name="shareEveryone_on" width="340" height="80"/>
         <image name="shareFacebook_off" width="80" height="80"/>
