fixes UI issues relating to image capture on iPad / 3.5” devices

--- a/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
+++ b/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
@@ -3154,8 +3154,8 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="sbm-gJ-83e"/>
         <segue reference="cDh-QJ-kAL"/>
-        <segue reference="UqM-tx-VCb"/>
+        <segue reference="sbm-gJ-83e"/>
+        <segue reference="TKb-mp-b48"/>
     </inferredMetricsTieBreakers>
 </document>
