re-enables social import, gets a start on contact import logic

--- a/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
+++ b/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
@@ -3155,7 +3155,7 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="cDh-QJ-kAL"/>
-        <segue reference="sbm-gJ-83e"/>
+        <segue reference="Rax-cR-yIy"/>
         <segue reference="TKb-mp-b48"/>
     </inferredMetricsTieBreakers>
 </document>
